# titan-project

./: CURL.md  README.md  docker-compose.yml  main.py  prompt-log.md  pyproject.toml
app/: __init__.py  api.py  config.py  db.py  db_models.py  ingestion.py  normalize.py  openlibrary.py  pii.py  reading_lists.py  repository.py  scheduler.py  schemas.py  types.py  worker.py
app/routers/: books.py
scripts/: run_ingest.py
