[project]
name = "titan"
version = "0.1.0"
description = "Multi-tenant Open Library catalog service"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2.3",
    "pydantic-settings>=2.6.1",
]

[tool.uv]
package = false
